# StripperCS2_ms

./: CMakeLists.txt
.github/workflows/: build.yml
Gamedata/: StripperCS2_ms.games.json
Managed/: InterfaceBridge.cs  NativeLoader.cs  StripperCS2_ms.cs  StripperCS2_ms.csproj
src/bridge/: bridge_api.cpp  bridge_api.h
