cmake_minimum_required(VERSION 3.20)
project(StripperCS2_ms_adapter CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
option(BUILD_SHARED_LIBS "Build shared library" ON)
add_subdirectory(vendor/spdlog EXCLUDE_FROM_ALL)
include_directories(src)
include_directories(vendor/spdlog/include)
file(GLOB_RECURSE SRC_ACTIONS   src/actions/*.cpp)
file(GLOB_RECURSE SRC_PROVIDERS src/providers/*.cpp)
file(GLOB_RECURSE SRC_UTILS     src/utils/*.cpp)
list(FILTER SRC_UTILS EXCLUDE REGEX "extension\.cpp$")
list(FILTER SRC_UTILS EXCLUDE REGEX "hook\.cpp$")
set(SRC_BRIDGE src/bridge/bridge_api.cpp)
add_library(StripperCS2_ms_adapter SHARED ${SRC_ACTIONS} ${SRC_PROVIDERS} ${SRC_UTILS} ${SRC_BRIDGE})
target_link_libraries(StripperCS2_ms_adapter PRIVATE spdlog::spdlog)
target_compile_definitions(StripperCS2_ms_adapter PRIVATE _CRT_SECURE_NO_WARNINGS)
if (WIN32)
  target_compile_definitions(StripperCS2_ms_adapter PRIVATE _WIN32 WIN32_LEAN_AND_MEAN)
endif()

